# LicenseMode

./: .gitmodules  CMakeLists.txt  GetLicenseInfo.sh  License.LIC  README.md  cipherText.txt  main.cpp  prikey.pem  pubkey.pem
AuthorizedFile/: PaymentCertificate.json  ProbationaryCertificate.json
LicenseMode/Public/: HardwareInfo.h  LicenseInfo.h
LicenseModule/Private/: Encipher.cpp  HardwareInfo.cpp
LicenseModule/Public/: Encipher.h  HardwareInfo.h  License.h  LicenseInfo.h  LicenseManager.h  MachineCodeGenerator.h  RSACrypto.h
RegistrationTool/: CMakeLists.txt  main.cpp  main_demo.cpp  main_register.cpp
RegistrationTool/LicenseModule/Private/: LicenseInfo.cpp
RegistrationTool/LicenseModule/Public/: Encipher.h  HardwareInfo.h  LicenseInfo.h
test/: CMakeLists.txt  LicenseManager_test.cpp  License_test.cpp  RSACrypto_test.cpp  test_main.cpp
